# pydata-mcp-workshop

./: .env.template  .gitignore  .pre-commit-config.yaml  Makefile  README.md  example_claude_desktop_config.json  pyproject.toml
docs/cli/: mcp_cli_arch.d2
docs/mcp/: mcp_architecture.d2
solution/advanced/: README.md  test_wikipedia_server.py  wikipedia_server.py
solution/clients/: cli_client.py  config.py
solution/clients/sub_exercises/: 01_agent_setup.py  02_chat_logic.py  03_polish.py
solution/clients/templates/: error_help_template.j2  info_template.j2  system_template.j2  welcome_template.j2
solution/examples/: 01_message_structure.py  02_math_server.py  03_pydata_server.py
solution/servers/: test_wikipedia_server.py  wikipedia_api_demo.py  wikipedia_server.py
tutorials/: 01-mcp-fundamentals.ipynb  02-wikipedia-server.ipynb
workshop/: __init__.py  test_mcp_discovery.py
workshop/advanced/: wikipedia_server.py
workshop/clients/: 01_agent_setup.py  02_chat_logic.py  03_polish.py
workshop/examples/: 01_message_structure.py  02_math_server.py
workshop/servers/: test_wikipedia_server.py  wikipedia_server.py
