[project]
name = "mcp-workshop-pydata-ams"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "httpx>=0.28.1",
    "ipython>=9.5.0",
    "openai>=1.107.2",
    "pydantic>=2.11.9",
    "pydantic-ai>=1.0.6",
    "requests>=2.32.5",
    "rich>=14.1.0",
    "streamlit>=1.49.1",
    "typer>=0.17.4",
    "wikipedia-api>=0.8.1",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "ruff>=0.13.0",
]
